update index.html to include only script src tag of index.js

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <title>hello-wasm example</title>
   </head>
   <body>
-    <script type="module">
-      import init, { greet } from "./pkg/hello_wasm.js";
-      init().then(() => {
-        greet("WebAssembly");
-      });
-    </script>
+    <script src="./index.js"></script>
   </body>
 </html>
